--- a/src/components/header.css
+++ b/src/components/header.css
@@ -28,6 +28,13 @@
   font-weight: 700;
   outline: none;
   cursor: pointer;
+  transition: 500ms;
+}
+
+.Header button:hover {
+  background: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  transform: translateY(-3px);
 }
 
 @media (max-width: 640px) {
