--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -33,12 +33,16 @@ a {
   color: white;
   font-size: 60px;
   line-height: 1.2;
+  opacity: 0;
+  animation: HeroAnimation 1s ease-in-out 0.1s forwards;
 }
 
 .Hero p {
   color: rgba(255, 255, 255, 0.8);
   font-size: 30px;
   line-height: 1.5;
+  opacity: 0;
+  animation: HeroAnimation 1s ease-in-out 0.2s forwards;
 }
 
 .Hero a {
@@ -63,5 +67,16 @@ a {
 
   .Hero p {
     font-size: 24px;
+  }
+}
+
+@keyframes HeroAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
