End Card component & Cards section

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -35,7 +35,7 @@ a {
   font-size: 60px;
   line-height: 1.2;
   opacity: 0;
-  animation: HeroAnimation 1s ease-in-out 0.1s forwards;
+  animation: HeroAnimation 1s cubic-bezier(0.2,0.8,0.2,1) 0.1s forwards;
 }
 
 .Hero p {
@@ -43,7 +43,7 @@ a {
   font-size: 30px;
   line-height: 1.5;
   opacity: 0;
-  animation: HeroAnimation 1s ease-in-out 0.2s forwards;
+  animation: HeroAnimation 1s cubic-bezier(0.2,0.8,0.2,1) 0.2s forwards;
 }
 
 .Hero a {
@@ -104,4 +104,34 @@ a {
   grid-gap: 40px;
   margin: 100px 0px;
   justify-items: center;
+}
+
+.Cards h2 {
+  margin: 50px 20px;
+  font-size: 60px;
+  text-align: center;
+  font-weight: 700;
+  background: linear-gradient(104deg, #050A27 0%, #4A548C 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.CardGroup {
+  margin: 50px 40px 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+  justify-items: center;
+}
+
+@media (max-width: 1060px) {
+  .CardGroup {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 720px) {
+  .CardGroup {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
