--- a/src/components/header.css
+++ b/src/components/header.css
@@ -34,7 +34,7 @@
 .Header button:hover {
   background: white;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-  transform: translateY(-3px);
+  transform: translateY(-3px) cubic-bezier(0.2,0.8,0.2,1);
 }
 
 @media (max-width: 640px) {
