--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -120,7 +120,7 @@ a {
   margin: 50px 40px 100px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 40px;
+  grid-gap: 40px 40px;
   justify-items: center;
 }
 
